--- a/Sentral/SentralLibrary/SentralLibrary.csproj
+++ b/Sentral/SentralLibrary/SentralLibrary.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="7.0.6" />
   </ItemGroup>
 
